--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>"UFSC chamadas"</title>
+    <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -20,32 +20,22 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
   </head>
-  
-  <body ng-app="ufscchamadas" ng-controller="chamadasCtrl">
-
-    <div class="bar bar-header bar-positive">
-      <h1 class="title">Chamadas</h1>
-      <button class="button icon ion-settings"></button>
-    </div>
-
-    <div class="image">
-      <img class="full-image brasao-img" src="img/brasao.png">
-    </div>
-
-    <form ng-submit="login(user)">
-      <div class="list">
-        <label class="item item-input">
-          <input type="text" placeholder="Username" ng-model="user.username">
-        </label>
-        <label class="item item-input">
-          <input type="password" placeholder="Password" ng-model="user.password">
-        </label>
-      </div>
-
-      <button class="button button-full button-positive" type="submit "> Login </button>
-    </form>
-
-
+  <body ng-app="starter">
+    <!--
+      The nav bar that will be updated as we navigate between views.
+    -->
+    <ion-nav-bar class="bar-header bar-positive">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    <!--
+      The views will be rendered in the <ion-nav-view> directive below
+      Templates are in the /templates folder (but you could also
+      have templates inline in this html file if you'd like).
+    -->
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
