continuando implementação dos serviços

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     -->
     <ion-nav-bar class="bar-header bar-positive">
       <ion-nav-back-button>
+        Voltar
       </ion-nav-back-button>
     </ion-nav-bar>
     <!--
