--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <!-- Enable all requests, inline styles, and eval() -->
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
 
-    <title></title>
+    <title>UFSC Chamadas</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -19,7 +19,9 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- RequireJs lib -->
-    <script src="../node_modules/requirejs/require.js"></script>
+    <script type="text/javascript" src="../node_modules/requirejs/require.js"></script>    
+    <!-- Moodle client-->
+    <script type="text/javascript" src="../node_modules/moodle-client/client.js"></script>
     
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
