--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,9 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- require PLugin -->
+    <script src="../node_modules/requirejs/require.js"></script>
+    
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
