creating new view to deal with empty courses_sessions

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/controllers/mySessionsCtrl.js"></script>
     <script src="js/controllers/mySessionCtrl.js"></script>
     <script src="js/controllers/sessionNotFound.js"></script>
+    <script src="js/controllers/mySessionsNotFound.js"></script>
 
     <script src="js/services/services.js"></script>
     <script src="js/services/sessionsService.js"></script>
